syntax = "proto3";

package mini_tiktok.proto.comment;

message Comment {
    // 视频评论id
    int64 id = 1;
    // 评论用户的信息
    User user = 2;
    // 评论内容
    string content = 3;
    // 评论发布日期, 格式为 mm-dd
    string create_date = 4;
}

message CommentActionRequest {
    // 用户鉴权token
    string token = 1;
    // 视频id
    int64 video_id = 2;
    enum CommentActionTypeCode {
        PUBLISH = 0;
        DELETE = 1;
    }
    //状态码, 如上
    CommentActionTypeCode  action_type = 3;
    // 用户评论内容, 当action_type的值为PUBLISH时使用
    string comment_text = 4;
    // 需要删除的评论的id, 当action_type的值为DELETE时使用
    int64 comment_id = 5;
}

message CommentActionResponse {
    enum CommentStatusTypeCode {
        SUCCESS = 0;
        FAIL = 1; 
    }
    // 状态码, 如上
    CommentStatusTypeCode status_code = 1;
    // 返回状态描述
    string status_msg = 2;
    // 评论成功则返回评论内容
    Comment comment = 3;
}

message CommentListRequest {
    // 用户鉴权token
    string token = 1;
    // 视频id
    int64 video_id = 2;
}

message CommentListResponse {
    enum ListStatusTypeCode {
        SUCCESS = 0;
        FAIL = 1; 
    }
    // 状态码, 如上
    ListStatusTypeCode status_code = 1;
    // 返回状态信息
    string status_msg = 2;
    // 评论列表
    repeated Comment comment_list = 3;

}

message User {
    // 用户id
    int64 id = 1;
    // 用户名称
    string name = 2;
    // 关注总数
    int64 follow_count = 3;
    // 粉丝总数
    int64 follower_count = 4;
    // true-已关注，false-未关注
    bool is_follow = 5;
  }